// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrackBuilder can build coordinates with a new builder 1`] = `
{
  "tiles": [
    "coord-id-0",
    "coord-id-1",
    "coord-id-2",
  ],
}
`;

exports[`TrackBuilder can build coordinates with a new builder 2`] = `
[
  "coord-id-0",
  "coord-id-1",
  "coord-id-2",
]
`;

exports[`TrackBuilder can build coordinates with the given builder options 1`] = `
{
  "tiles": [
    "coord-id-0",
    "coord-id-1",
    "coord-id-2",
  ],
}
`;
